--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <body>
     <div class="resume">
         <div class="left">
-            <img src="myProfile50%.jpg" alt="">
+            <img src="myProfile50.jpg" alt="">
             <div class="left-content">
                 <h2><i class="fa-solid fa-user"></i>About Me</h2>
                 <p>A motivated and detail-oriented recent Computer Science graduate seeking an entry-level position as a Software Developer. Having a solid knowledge of Core Java, C language, HTML/CSS as well as Data Structure. Possessing strong problem solving skills and ability to work both independently and collaboratively in a team. Eager to contribute to innovative software solutions.</p>
@@ -228,3 +228,4 @@
     </div>
 </body>
 </html>
+
